syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";


package leaf.service;

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

message LeafReq {
    string biz_tag = 1;
}

message LeafReply {
    int64 id = 1;
}

service Leaf {
    rpc NextID (LeafReq) returns (LeafReply) {
        option (google.api.http) = {
            get: "/leaf/next-id"
        };
    };
}